--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "deploy": "set NEXT_PUBLIC_BASE_PATH=/test-nextra && next build && next export"
+    "deploy": "next build && next export"
   },
   "dependencies": {
     "next": "^12.3.1",
