--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,7 @@ jobs:
           npm i --legacy-peer-deps
           npm run build
           npm run export
+          touch out/.nojekyll
       - name: Deploy to docs 🚀
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
