--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "DEV_ENV=true next dev",
     "build": "next build",
     "start": "next start",
     "export": "next export"
@@ -9,7 +9,6 @@
   "dependencies": {
     "next": "^12.3.1",
     "nextra": "^1.1.0",
-    "nextra-theme-docs": "^1.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
